--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres:///python_getting_started
+DATABASE_URL=mysql://b2211775d694c6:24053edc@us-cdbr-iron-east-03.cleardb.net/heroku_5ca81d228f72add?reconnect=true
 TIMES=2
