--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-dj-database-url==0.3.0
 Django==1.8.1
+MySQL-python==1.2.5
+SQLAlchemy==1.0.4
+argparse==1.2.1
+dj-database-url==0.3.0
+django-datetime-widget==0.9.3
 django-postgrespool==0.3.0
 gunicorn==19.3.0
 psycopg2==2.6
-SQLAlchemy==1.0.4
-whitenoise==1.0.6
+pytz==2015.7
 requests==2.3.0
+whitenoise==1.0.6
+wsgiref==0.1.2
