--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.8.1
 MySQL-python==1.2.5
+PyYAML==3.11
 SQLAlchemy==1.0.4
 argparse==1.2.1
 dj-database-url==0.3.0
@@ -7,7 +8,9 @@ django-datetime-widget==0.9.3
 django-postgrespool==0.3.0
 gunicorn==19.3.0
 psycopg2==2.6
+py-mysql2pgsql==0.1.5
 pytz==2015.7
 requests==2.3.0
+termcolor==1.1.0
 whitenoise==1.0.6
 wsgiref==0.1.2
